--- a/digitala.html
+++ b/digitala.html
@@ -732,166 +732,15 @@
     <section class="tab-section active about-section" id="about">
         <div class="about-container">
             <div class="about-content">
-                <h1 class="about-heading">Tala Chibli</h1>
+                <h1 class="about-heading">Digitala | Branding & Marketing Agency</h1>
                 <p class="about-paragraph">
-                    I’m Tala Chibli, a Palestinian student born on January 2, 2006, currently pursuing degrees in
-                    English Literature and Management Information Systems. With a passion for digital design, youth
-                    empowerment, and creative education. I strive to use technology, media, and literature as tools for
-                    positive change. I’m committed to building a career that blends creativity, leadership, and
-                    community impact.
+                    Digitala is a creative and professional agency, created by Tala Chibli, that provides businesses and
+                    individuals with
+                    everything they need for a powerful digital presence. From branding and visual identity, to social
+                    media management, web design, and content creation — we offer a complete suite of services under one
+                    roof. Our mission is to transform ideas into impactful digital experiences, ensuring every brand we
+                    work with stands out with creativity, elegance, and professionalism.
                 </p>
-                <!-- Work Experience Section -->
-                <div class="work-experience-section">
-                    <h2 class="work-experience-heading">Work Experience</h2>
-                    <ul class="work-experience-list">
-                        <li class="work-experience-item">
-                            <h3 class="work-title">Graphic Designer | Social Media Marketer & Manager</h3>
-                            <p class="work-place-date"><strong>Rinawi Tech</strong> — July 2025 - September 2025</p>
-                            <p class="work-description">
-                                Managing social media platforms (Instagram & Facebook). Creating marketing and
-                                advertising designs for social media platforms. Content Creation.
-                            </p>
-                        </li>
-                        <li class="work-experience-item">
-                            <h3 class="work-title"> Facilitator</h3>
-                            <p class="work-place-date"><strong>Initiate NGO</strong> — May 2024 - July 2024</p>
-                            <p class="work-description">
-                                Provided psychological and social support for children through 1001Nights program.
-                            </p>
-                        </li>
-                        <li class="work-experience-item">
-                            <h3 class="work-title">Graphic Designer, Digital Marketer & Social Media Manager </h3>
-                            <p class="work-place-date"><strong>Youth As Leaders Association </strong> — January 2023 -
-                                August 2024</p>
-                            <p class="work-description">
-                                Developed and executed content strategies as a content creator, managed social media
-                                platforms, led marketing initiatives for a Palestinian embroidery project, and developed
-                                visual assets such as advertisements and brand logos.
-                            </p>
-                        </li>
-                    </ul>
-                </div>
-                <!-- Volunteer Experience Section -->
-                <div class="volunteer-experience-section">
-                    <h2 class="volunteer-experience-heading">Volunteer Experience</h2>
-                    <ul class="volunteer-experience-list">
-                        <li class="volunteer-experience-item">
-                            <p class="volunteer-place-date"><strong>Shabiba Palestine</strong> — 2023-Present</p>
-                            <ul class="volunteer-work-list">
-                                <li>Providing local community services.</li>
-                                <li>Photographer, Videographer and Media Worker.</li>
-                            </ul>
-                        </li>
-                        <li class="volunteer-experience-item">
-                            <p class="volunteer-place-date"><strong>Youth As Leaders Association</strong> — 2023-2024
-                            </p>
-                            <ul class="volunteer-work-list">
-                                <li>Participated in artistic and cultural activities.</li>
-                                <li>Activated and integrated children with disabilities by edutainment tools.</li>
-                            </ul>
-                        </li>
-                        <li class="volunteer-experience-item">
-                            <p class="volunteer-place-date"><strong>Al-Qadisiyah Scout</strong> — 2019-2023</p>
-                            <ul class="volunteer-work-list">
-                                <li>Leader of a group of 7-year-old girls.</li>
-                                <li>First aid provider.</li>
-                                <li>Lecturer in life skills and human values.</li>
-                                <li>Dabke trainer.</li>
-                            </ul>
-                        </li>
-                        <li class="volunteer-experience-item">
-                            <p class="volunteer-place-date"><strong>Ghassan Kanafani Cultural Foundation</strong> —
-                                2021-2023</p>
-                            <ul class="volunteer-work-list">
-                                <li>Activated teens through entertainment.</li>
-                                <li>Gave awareness lectures.</li>
-                            </ul>
-                        </li>
-                        <li class="volunteer-experience-item">
-                            <p class="volunteer-place-date"><strong>Jineen Preparatory School (UNRWA)</strong> —
-                                2021-2022</p>
-                            <ul class="volunteer-work-list">
-                                <li>Student support studying group leader.</li>
-                                <li>Created educational aids to help colleagues with learning difficulties.</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <!-- Education Section -->
-                <div class="education-section">
-                    <h2 class="education-heading">Education</h2>
-                    <ul class="education-list">
-                        <li class="education-item">
-                            <h3 class="education-degree">B.A. in English Literature</h3>
-                            <p class="education-place-date"><strong>Lebanese University</strong> — First Year (2024 -
-                                Expected Graduation 2027)</p>
-                        </li>
-                        <li class="education-item">
-                            <h3 class="education-degree">Management Information System</h3>
-                            <p class="education-place-date"><strong>Siblin Training Center</strong> — Second Year of TS
-                                Degree & Diploma (2025 - Expected Graduation 2026)</p>
-                        </li>
-                    </ul>
-                </div>
-                <!-- Extra-Curricular Activities Section -->
-                <div class="extra-curricular-section">
-                    <h2 class="extra-curricular-heading">Extra-Curricular Activities</h2>
-                    <ul class="extra-curricular-list">
-                        <li class="extra-curricular-year">
-                            <strong>2025</strong>
-                            <ul>
-                                <li>Published Short Story – "About a Woman Named Laila" / Dar Al-Thaqafa Academy</li>
-                            </ul>
-                        </li>
-                        <li class="extra-curricular-year">
-                            <strong>2024</strong>
-                            <ul>
-                                <li>Creative Writing Skills / Ghassan Kanafani Cultural Foundation</li>
-                                <li>Social Media Marketing / HubSpot Academy</li>
-                                <li>Inclusion and Disability / Youth As Leaders Association</li>
-                                <li>Edutainment Tools Activity / Youth As Leaders Association</li>
-                            </ul>
-                        </li>
-                        <li class="extra-curricular-year">
-                            <strong>2023</strong>
-                            <ul>
-                                <li>First Aid / YALA</li>
-                                <li>Chess Tournament / Ghassan Kanafani Cultural Foundation</li>
-                                <li>Leadership Skills / Al-Qadisiyah Scout</li>
-                            </ul>
-                        </li>
-                        <li class="extra-curricular-year">
-                            <strong>2022</strong>
-                            <ul>
-                                <li>Life Skills / Mobader</li>
-                                <li>Time Management / Mobader</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <!-- Skills Section -->
-                <div class="skills-section">
-                    <h2 class="skills-heading">Skills</h2>
-                    <ul class="skills-list">
-                        <li class="skill-item">Communication Skills</li>
-                        <li class="skill-item">Creative Teaching Techniques</li>
-                        <li class="skill-item">Front-End Development</li>
-                        <li class="skill-item">Google Workspace</li>
-                        <li class="skill-item">Leadership Skills</li>
-                        <li class="skill-item">Microsoft Office</li>
-                        <li class="skill-item">Photography &amp; Videography</li>
-                        <li class="skill-item">Problem Solving Skills</li>
-                        <li class="skill-item">Time Management Skills</li>
-                    </ul>
-                </div>
-                <!-- Awards Section -->
-                <div class="awards-section">
-                    <h2 class="awards-heading">Awards</h2>
-                    <ul class="awards-list">
-                        <li class="award-item"><strong>Beirut International Volunteer Award</strong> — Lebanese Ministry
-                            of Youth and Sports</li>
-                    </ul>
-                </div>
             </div>
         </div>
     </section>
