--- a/digitala.html
+++ b/digitala.html
@@ -707,7 +707,7 @@
         }
 
         .translate-switch {
-            background: #807f7f;
+            background: #000000;
             color: #fff;
             border: none;
             border-radius: 20px;
@@ -721,7 +721,7 @@
         }
 
         .translate-switch:hover {
-            background: #807f7f;
+            background: #000000;
         }
 
         @media (max-width: 768px) {
