--- a/digitala.html
+++ b/digitala.html
@@ -1082,7 +1082,7 @@
                             loading="lazy" />
                         <div>
                             <div class="feedback-name">Jana Bakir</div>
-                            <div class="feedback-role">BAU Student</div>
+                            <div class="feedback-role">Business Management Student</div>
                         </div>
                     </div>
                     <div class="feedback-content">
