--- a/digitala.html
+++ b/digitala.html
@@ -1079,28 +1079,23 @@
     <!-- HERO -->
     <section id="home" class="section hero fade-in">
         <div class="hero-main">
-            <h2>Tala Chibli</h2>
-            <div class="headline">Entrepreneur · Digital Creator · Student</div>
-            <p>
-                Blending the sensitivity of literature with the logic of digital systems, I create playful, black &
-                white media experiences. My work balances technical clarity and artistic curiosity. Welcome to my
-                advanced portfolio!
-            </p>
-            <div class="hero-actions">
-                <a class="nav-btn" href="#services">See Services</a>
-                <a class="nav-btn secondary" href="#contacts">Contact Me</a>
+            <div class="hero-photo">
+                <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=400&q=80"
+                    alt="Portrait">
+                <h2>Tala Chibli</h2>
+                <div class="headline">Entrepreneur · Digital Creator · Student</div>
+                <div class="hero-actions">
+                    <a class="nav-btn" href="#services">See Services</a>
+                    <a class="nav-btn secondary" href="#contacts">Contact Me</a>
+                </div>
+                <div class="stats">
+                    <div class="stat">GPA: <strong>3.7</strong> · English Literature</div>
+                    <div class="stat">MIS: <strong>Higher Technician</strong></div>
+                    <div class="stat">Designs: <strong>50+ Projects</strong></div>
+                    <div class="stat">Awards: <strong>7</strong></div>
+                </div>
             </div>
-            <div class="stats">
-                <div class="stat">GPA: <strong>3.7</strong> · English Literature</div>
-                <div class="stat">MIS: <strong>Higher Technician</strong></div>
-                <div class="stat">Designs: <strong>50+ Projects</strong></div>
-                <div class="stat">Awards: <strong>7</strong></div>
-            </div>
-        </div>
-        <div class="hero-photo">
-            <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=400&q=80"
-                alt="Portrait">
-            <div class="caption">Black & white creative portrait</div>
+
         </div>
     </section>
     <!-- ABOUT -->
@@ -1541,7 +1536,15 @@
                 <div class="project-gallery">
                     <div class="project-photo-block">
                         <img src="https://imgur.com/QYBRaU8.jpg" alt="Poster 1">
-                        <div class="photo-caption">Crepeno & Bas Pasta Menu Poster</div>
+                        <div class="photo-caption">Poster 1</div>
+                    </div>
+                    <div class="project-photo-block">
+                        <img src="https://imgur.com/dzpdQEU.jpg" alt="Poster 2">
+                        <div class="photo-caption">Poster 2</div>
+                    </div>
+                    <div class="project-photo-block">
+                        <img src="https://imgur.com/9uWScuA.jpg" alt="Menu">
+                        <div class="photo-caption">Menu</div>
                     </div>
                 </div>
             </div>
@@ -1554,21 +1557,24 @@
                 <div class="project-title">Product Photography & Digital Marketing Project</div>
                 <div class="project-company">Khait w Hkaya – YALA Association</div>
                 <div class="project-desc">
-                    For Khait w Hkaya, a local Palestinian embroidery initiative, I produced product photography and
-                    digital marketing assets.
-                    <br><br>
-                    ✨ Product Photography: Professional, natural-light shots for catalog and social media.
-                    <br><br>
-                    ✨ Marketing Materials: Posters, flyers, and Instagram posts designed to highlight the embroidery
-                    and storytelling.
-                    <br><br>
-                    ✨ Digital Campaign: Helped launch the online campaign, increasing engagement and reach for YALA
-                    Association.
+                    <br>Role: Product Photographer & Digital Marketer</br>
+                    <br>Year: 2023</br>
+                    <br>• Photographed handmade products (bags, wallets, keychains) highlighting the Palestinian
+                    heritage
+                    style.</br>
+                    <br>• Conducted a professional photoshoot with multiple setups suitable for digital
+                    display.</br>
+                    <br>• Created visual content tailored for social media platforms.</br>
+                    <br>• Marketed the products online, increasing reach and engagement with the target
+                    audience.</br>
+
+                    <br>Skills gained:</br>
+                    <br>Photography · Visual Storytelling · Digital Marketing · Social Media Management</br>
                 </div>
                 <div class="project-gallery">
                     <div class="project-photo-block">
-                        <img src="https://imgur.com/KYcVY8g.jpg" alt="Embroidery Product Photo">
-                        <div class="photo-caption">Khait w Hkaya Product Photography</div>
+                        <img src="https://imgur.com/0BO1tFS.jpg" alt="Logo Design">
+                        <div class="photo-caption">Khait w Hkaya Collection</div>
                     </div>
                 </div>
             </div>
@@ -1616,6 +1622,70 @@
             });
         });
     </script>
+    <!-- FEEDBACKS SECTION -->
+    <section class="tab-section" id="feedbacks">
+        <div class="feedbacks-container">
+            <h2 class="section-title">Feedbacks</h2>
+            <div class="feedbacks-grid">
+                <div class="feedback-card">
+                    <div class="feedback-header">
+                        <img src="https://imgur.com/XWagJpO.jpg" alt="Client Photo" class="feedback-photo"
+                            loading="lazy" />
+                        <div>
+                            <div class="feedback-name">Mahmoud Cherham</div>
+                            <div class="feedback-role">Founder of Crepeno Restaurant</div>
+                        </div>
+                    </div>
+                    <div class="feedback-content">
+                        <blockquote>
+                            “Honestly, the result were beyond our expectations. The outcome was amazing, and we
+                            gained
+                            more followers.
+                            May God bless your work and make things easier for you, you are truly talented.”
+                        </blockquote>
+                    </div>
+                </div>
+                <div class="feedback-card">
+                    <div class="feedback-header">
+                        <img src="https://imgur.com/CbwDanL.jpg" alt="Client Photo" class="feedback-photo"
+                            loading="lazy" />
+                        <div>
+                            <div class="feedback-name">Jana Bakir</div>
+                            <div class="feedback-role">Business Management Student</div>
+                        </div>
+                    </div>
+                    <div class="feedback-content">
+                        <blockquote>
+                            “Hey love, I genuinely want to thank you from the bottom of my heart for your work on my
+                            CV
+                            and cover letter. I absolutely loved them. Everything was so well-organized, polished,
+                            and
+                            delivered right on time. I even ended up getting an A in the course, so
+                            thank you so much.”
+                        </blockquote>
+                    </div>
+                </div>
+                <div class="feedback-card">
+                    <div class="feedback-header">
+                        <img src="https://imgur.com/CbwDanL.jpg" alt="Client Photo" class="feedback-photo"
+                            loading="lazy" />
+                        <div>
+                            <div class="feedback-name">Raghad Nasser</div>
+                            <div class="feedback-role">Founder of Lamsa Candles Store</div>
+                        </div>
+                    </div>
+                    <div class="feedback-content">
+                        <blockquote>
+                            “I am beyond impressed with your work! Your designs are truly exceptional and stand out
+                            in
+                            every way. The creativity, attention to detail, and overall quality are unmatched. I
+                            absolutely loved the results and couldn’t be happier with them”
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- CONTACT -->
     <section class="section fade-in" id="contacts">
         <h2>Contact Me</h2>
