--- a/digitala.html
+++ b/digitala.html
@@ -1096,19 +1096,16 @@
                     <img src="https://imgur.com/KseW3Eo.png" alt="Digitala - Tala Chibli" />
                 </div>
                 <div>
-                    <h1 id="about-heading" class="about-heading">Digitala | Complete suite of digital services under one
-                        roof</h1>
+                    <h1 id="about-heading" class="about-heading">Digitala | Designing and Developing Agency</h1>
                     <p class="about-paragraph">
                         Tala is a multi-passionate girl. She started designing by accident in 2017, and over the years
-                        she explored graphic design, web development, content creation... And then she drowned in love
-                        with everything digital. Her major in Management Information Systems enhanced her confidence in
-                        technology, entrepreneurship, and data analysis, as well as her understanding of customer needs,
+                        she explored more about graphic design, web development, business english ... Her major in IT
+                        enhanced her confidence in
+                        technology, entrepreneurship, and programming, as well as her understanding of customer needs,
                         which enabled her to launch her own agency <u>“DIGITALA”</u>.<br>
                         Digitala is a creative and professional agency that provides businesses and individuals with
-                        everything they need for a powerful digital presence. From branding and marketing designs to
-                        social media management, web development and content creation. We offer a complete suite of
-                        services under one roof. <br>
-                        <b><i>My mission is to transform ideas into impactful digital experiences, ensuring every brand
+                        a powerful digital presence. <br>
+                        <b><i>Our mission is to transform ideas into impactful digital experiences, ensuring every brand
                                 we
                                 work with stands out with creativity, elegance, and professionalism.</i></b>
                     </p>
@@ -1126,23 +1123,23 @@
                         style="background-image: linear-gradient(180deg, rgba(0,0,0,0.18), rgba(0,0,0,0.28)), url('https://imgur.com/Gcpk5j1.png');">
                         <div>
                             <div class="service-title-large">Visual Branding & Identity Design</div>
-                            <div class="service-sub">Logo Design · Visual Identity · Social Media & more</div>
+                            <div class="service-sub">Visual Identity · Social Media Branding Kit & more</div>
                         </div>
                     </div>
 
                     <div class="service-tile" data-service="frontend-websites" role="Button" tabindex="0"
                         style="background-image: linear-gradient(180deg, rgba(0,0,0,0.14), rgba(0,0,0,0.3)), url('https://imgur.com/LBsXXmI.png');">
                         <div>
-                            <div class="service-title-large">Stunning Frontend Websites</div>
-                            <div class="service-sub">UI Design · Content Writing · Frontend</div>
+                            <div class="service-title-large">Full Stack Web Development</div>
+                            <div class="service-sub">Frontend Development · Backend Development</div>
                         </div>
                     </div>
 
                     <div class="service-tile" data-service="extra-services" role="button" tabindex="0"
                         style="background-image: linear-gradient(180deg, rgba(0,0,0,0.12), rgba(0,0,0,0.28)), url('https://imgur.com/7Zel25b.png');">
                         <div>
-                            <div class="service-title-large">Extra Services</div>
-                            <div class="service-sub">CV · Portfolios · Presentations</div>
+                            <div class="service-title-large">Career & Study Support</div>
+                            <div class="service-sub">CV · Projects · Presentations · Assignments & more</div>
                         </div>
                     </div>
                 </div>
@@ -1160,7 +1157,7 @@
 
         <!-- PORTFOLIO -->
         <section id="graphics" class="section fade-in-up delay-3" aria-labelledby="portfolio-title">
-            <h2 id="portfolio-title" class="section-title">Portfolio</h2>
+            <h2 id="portfolio-title" class="section-title">My Work</h2>
 
             <div class="carousel-wrap" style="margin-top:8px;">
                 <div class="graphics-file-grid carousel">
@@ -1482,62 +1479,32 @@
 
         const servicesData = {
             "visual-identity": {
-                title: "Build Your Visual Identity",
+                title: "Visual Branding & Identity Design",
                 items: [
-                    { name: "Logo Design", price: "From $120", description: "Custom logo options with revisions and final files for web and print." },
-                    { name: "Colour Palette", price: "From $50", description: "Curated brand color palettes suited to your identity." },
-                    { name: "Typography", price: "From $40", description: "Typeface pairing and recommended usage for headings and body." },
-                    { name: "Iconography", price: "From $60", description: "Set of custom icons tailored to your brand language." },
-                    { name: "Patterns/Textures", price: "From $80", description: "Repeatable patterns and textures for backgrounds and packaging." },
-                    { name: "Layout Systems", price: "From $100", description: "Grid and layout guidelines for digital and print usage." },
-                    { name: "Shapes", price: "From $40", description: "Signature shapes and elements for brand recognition." },
-                    { name: "Packaging", price: "From $140", description: "Packaging concepts and dielines ready for production." },
-                    { name: "Signage", price: "From $90", description: "Design for in-store signage and exterior branding." },
-                    { name: "Merchandise", price: "From $120", description: "Branded merchandise mockups and print-ready files." }
-                ]
-            },
-            "social-presence": {
-                title: "Grow Your Social Presence",
-                items: [
-                    { name: "Content Creation", price: "From $150 / month", description: "Visuals and captions tailored for your target audience." },
-                    { name: "Content Calendar", price: "From $80", description: "Planned posting schedule and content themes." },
-                    { name: "Engagement Strategy", price: "From $120", description: "Tactics to increase interactions and community growth." },
-                    { name: "Brand Consistency", price: "From $90", description: "Guidelines to keep the brand voice and visuals cohesive." },
-                    { name: "Trend Monitoring", price: "From $60", description: "Ongoing trend checks to keep content relevant." },
-                    { name: "Community Building", price: "From $140 / month", description: "Support and tactics to grow active followers." }
+                    { name: "Logo Design", price: "From $40", description: "2-3 types delivery in multiple formats (PNG, PDF, SVG)." },
+                    { name: "Full Brand Identity Design", price: "From $60", description: "Logo, Submark, Color Palette, Typography, Iconography, Patterns." },
+                    { name: "Brand Guidelines", price: "From $30", description: "Logo usage guide - colors & typography rules - Do's and Don'ts - Spacing Example - Layout & Mockup Examples." },
+                    { name: "Social Media Branding Kit", price: "From $40", description: "Profile Photo & Cover Banner - 3 Posts Templates - Highlights Icons (Optional)." },
+                    { name: "Business & Stationary Design", price: "From $20", description: "Business Card - Letter Head - Envelope - Email Signature." },
+                    { name: "Brand Collateral Design", price: "From $20", description: "Flayer - Poster - Brochure - Cataloge - Stickers - Packaging." },
+                    { name: "Complete Visual Identity Package", price: "From $200", description: "Every thing your brand need, from concept to final files." }
                 ]
             },
             "frontend-websites": {
-                title: "Stunning Frontend Websites",
+                title: "Full Stack Web Development",
                 items: [
-                    { name: "Frontend Web Design", price: "From $450", description: "Responsive pages with clean, modern UI." },
-                    { name: "Content Writing for Web", price: "From $80/page", description: "SEO-friendly copy for pages and CTAs." },
-                    { name: "User Interface (UI) Design", price: "From $300", description: "High-fidelity UI mockups and prototypes." }
-                ]
-            },
-            "printed-custom": {
-                title: "Printed & Custom Designs",
-                items: [
-                    { name: "Print Materials", price: "From $90", description: "Flyers, posters, business cards and more, print-ready." },
-                    { name: "Custom Characters", price: "From $120", description: "Unique character illustrations for branding or mascots." },
-                    { name: "Tailored Designs", price: "From $110", description: "Custom visual assets for special campaigns or events." }
-                ]
-            },
-            "photo-video": {
-                title: "Photography & Video Production",
-                items: [
-                    { name: "Product Photography", price: "From $200 / session", description: "Studio-style product shots for e-commerce and socials." },
-                    { name: "Promotional Videos", price: "From $350", description: "Short promo videos optimized for social platforms." },
-                    { name: "Video Editing", price: "From $80 / video", description: "Post-production edits, color grading and export." }
+                    { name: "Frontend Development", price: "From $150", description: "HTML, CSS, JavaScript development, Responsive & cross browser compatible, layout, animation, and interaction elements." },
+                    { name: "Backend Development", price: "From $200", description: "Database setup & management, Server-side scripting & APIs, Security & authentication setup." },
+                    { name: "Full Stack Development", price: "From $300", description: "Frontend Development, Backend & Database Integration, Deployment & Testing." }
                 ]
             },
             "extra-services": {
                 title: "Extra Services",
                 items: [
-                    { name: "CV & Cover Letter", price: "From $35", description: "Polished CV and tailored cover letter for job applications." },
-                    { name: "Portfolio Design", price: "From $120", description: "Professional portfolio layout ready for sharing." },
-                    { name: "Presentations & PDFs", price: "From $50", description: "Branded slide decks and printable PDFs." },
-                    { name: "Projects & Assignments", price: "From $60", description: "Support with academic or professional projects." }
+                    { name: "CV / Resume", price: "From $35", description: "Frontend Development, Backend & Database Integration, Deployment & Testing." },
+                    { name: "Portfolio Design", description: "Frontend Development, Backend & Database Integration, Deployment & Testing." },
+                    { name: "Presentations & PDFs", description: "Frontend Development, Backend & Database Integration, Deployment & Testing." },
+                    { name: "Projects & Assignments", description: "Frontend Development, Backend & Database Integration, Deployment & Testing." }
                 ]
             }
         };
