--- a/digitala.html
+++ b/digitala.html
@@ -1385,7 +1385,7 @@
                                 loading="lazy" style="width:20px;height:20px" />
                             WhatsApp
                         </a>
-                        <a href="https://www.instagram.com/tala.chibli" target="_blank" rel="noopener">
+                        <a href="https://www.instagram.com/digitala_agency" target="_blank" rel="noopener">
                             <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/instagram.svg" alt="Instagram"
                                 loading="lazy" style="width:20px;height:20px" />
                             Instagram
@@ -1499,12 +1499,13 @@
                 ]
             },
             "extra-services": {
-                title: "Extra Services",
+                title: "Career & Study Support",
                 items: [
-                    { name: "CV / Resume", price: "From $35", description: "Frontend Development, Backend & Database Integration, Deployment & Testing." },
-                    { name: "Portfolio Design", description: "Frontend Development, Backend & Database Integration, Deployment & Testing." },
-                    { name: "Presentations & PDFs", description: "Frontend Development, Backend & Database Integration, Deployment & Testing." },
-                    { name: "Projects & Assignments", description: "Frontend Development, Backend & Database Integration, Deployment & Testing." }
+                    { name: "CV / Resume Writing", price: "From $5" },
+                    { name: "Forms & PDF Creation", price: "From $5" },
+                    { name: "Presentations / Slides Design", price: "From $10" },
+                    { name: "Projects & Assignments", price: "From $10" }
+
                 ]
             }
         };
