--- a/digitala.html
+++ b/digitala.html
@@ -18,7 +18,7 @@
             --muted: #555555;
             --accent: #6b21a8;
             /* purple */
-            --accent-2: #ff5a5f;
+            --accent-2: #460f65;
             /* coral */
             --accent-3: #00b4d8;
             /* cyan */
